src/specific_models/bot-iot/attack_identification/logfile.2020-07-14-21_45_04.log
  File "rnn.py", line 33
    np.random.seed (STATE)
    ^
IndentationError: unexpected indent
